<resources>
    <string name="_3ds">3DS</string>
    <string name="_3ds_verification">3DS Verification</string>
    <string name="a_forward_looking_digital_approach_to_traditional_high_value_business_banking">A forward-looking digital approach to traditional high-value business banking.</string>
    <string name="a_z">A to Z</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us_and_legal">About us and legal</string>
    <string name="accept_payments">Accept Payments</string>
    <string name="account">Account</string>
    <string name="account_activated">Account activated</string>
    <string name="account_balance">Account Balance %s</string>
    <string name="account_details">Account details</string>
    <string name="account_does_not_exist">Account does not exist</string>
    <string name="account_has_been_blocked">Account Has Been Blocked</string>
    <string name="account_iban">Account/IBAN</string>
    <string name="account_in_other_bank">Account in other banks</string>
    <string name="account_in_other_bank_opt">Account in other banks (optional)</string>
    <string name="account_information">Account information</string>
    <string name="account_name">Account name</string>
    <string name="account_name_optional">Account name (optional)</string>
    <string name="account_number">Account number</string>
    <string name="account_number_optional">Account number (optional)</string>
    <string name="account_top_up">Account Top-up</string>
    <string name="accounts">Accounts</string>
    <string name="acoount_doesnt_exist">Account doesn\'t exist</string>
    <string name="action_required">Action required</string>
    <string name="activate_account">Activate account</string>
    <string name="activate_plan">Activate %s Plan</string>
    <string name="activate_q">Activate %s?</string>
    <string name="activation_code">Activation code</string>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="add_account">Add Account</string>
    <string name="add_address">Add address</string>
    <string name="add_company">Add Company</string>
    <string name="add_invoice">Add new</string>
    <string name="add_invoice1">Add invoice</string>
    <string name="add_invoice_title">Add invoice</string>
    <string name="add_money">Add money</string>
    <string name="add_money_to_your_card_balance">Add money to your card balance</string>
    <string name="add_new_company">Add new company</string>
    <string name="add_new_crypto">New crypto</string>
    <string name="add_new_cryptowallet">Add new crypto wallet</string>
    <string name="add_new_invoice">Add new</string>
    <string name="add_primary_ubo">Add Primary UBO</string>
    <string name="add_secondary_ubo">Add Secondary UBO</string>
    <string name="add_shareholder">Add Shareholder</string>
    <string name="add_shareholders_optional">Add shareholders (optional)</string>
    <string name="add_ubo">Add UBO</string>
    <string name="add_ubos_ultimate_beneficial_owners_that_hold_over_25">Add UBO (ultimate beneficial owners) owning more than 25% of shares</string>
    <string name="add_ubos_ultimate_beneficial_owners_that_hold_under_25">Add UBO (ultimate beneficial owners) owning less than 25% of shares</string>
    <string name="added_invoices">Added invoices</string>
    <string name="added_to_vault">%s added to vault</string>
    <string name="additional_documents">Additional documents (optional)</string>
    <string name="additional_info">Additional info</string>
    <string name="additional_information">Additional information</string>
    <string name="additional_information_optional">Additional information (optional)</string>
    <string name="address">Address</string>
    <string name="address_line_1">Address</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="alphabetical_order">Ascending alphabetical order</string>
    <string name="amount">Amount</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Luminary</string>
    <string name="app_update_required">App Update Required</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_now">Apply Now</string>
    <string name="apply_now2">Apply now</string>
    <string name="approve_payment">Approve payment</string>
    <string name="approve_transaction">Approve action</string>
    <string name="approved">Approved</string>
    <string name="are_you_a_director_of_the_company">Are you a director of the company?</string>
    <string name="are_you_a_domiciliary_company">Are you a domiciliary company?</string>
    <string name="are_you_a_pep">Are you a PEP, family member or a close associate of a PEP?</string>
    <string name="are_you_a_pep_new_onboarding">Are you a Politically Exposed Person?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_us_person">Are you a U.S. person?</string>
    <string name="auth_welcome">Login</string>
    <string name="authorization_foreign_exchange">Authorization foreign exchange percentage fee</string>
    <string name="available_balance">Available balance</string>
    <string name="available_balance_value">Available balance: %s</string>
    <string name="average_monthly_crypto_payment">Average monthly cryptopayment (equivalent in EUR)</string>
    <string name="average_monthly_turnover">Average monthly turnover</string>
    <string name="average_single_crypto_payment">Average single cryptopayment (equivalent in EUR)</string>
    <string name="average_single_payment">Average single payment</string>
    <string name="awaiting_your_confirmation">Awaiting your confirmation</string>
    <string name="b_1_free_plastic_card">1 Free Plastic Card</string>
    <string name="b_1_gbp_and_1_eur_account">1 GBP and 1 EUR Account</string>
    <string name="b_1_per_additional_card">£1 per additional card</string>
    <string name="b_1_per_withdrawal_after">£1 per withdrawal after</string>
    <string name="b_3_free_virtual_cards">3 Free Virtual Cards</string>
    <string name="b_3_per_additional_account">£3 per additional account</string>
    <string name="b_5_per_additional_card">£5 per additional card</string>
    <string name="back">Back</string>
    <string name="balance">Balance: %s</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_account_lowercase">Bank account</string>
    <string name="bank_address">Bank address</string>
    <string name="bank_app_account_detail">Luminary Account</string>
    <string name="bank_app_account_lowercase">Luminary account</string>
    <string name="bank_app_accounts">Luminary account details</string>
    <string name="bank_app_id">Luminary ID</string>
    <string name="bank_app_id_payment">Luminary ID Payment</string>
    <string name="bank_app_payment">Luminary Payment</string>
    <string name="bank_details">Bank details</string>
    <string name="bank_name">Bank name</string>
    <string name="bank_payment">Bank Payment</string>
    <string name="basic">Basic</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="beneficiary_address">Beneficiary address</string>
    <string name="beneficiary_address_capitalize">Beneficiary Address</string>
    <string name="beneficiary_details">Beneficiary Details</string>
    <string name="beneficiary_name_was_adjusted">Beneficiary name was adjusted</string>
    <string name="beneficiary_type">Beneficiary Type</string>
    <string name="biometric_or_screen_lock_prompt_message">Use your biometric or screen lock to continue</string>
    <string name="biometric_prompt_message">Use your biometric to continue</string>
    <string name="borrow_amount">£%d,000</string>
    <string name="borrow_up_to">Borrow up to £1,000,000</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="business">Business</string>
    <string name="cancel">Cancel</string>
    <string name="change_your_5_digit_passcode">Change your 5-digit\npasscode?</string>
    <string name="confirm">Confirm</string>
    <string name="enter_2fa_code">Enter Auth Code</string>
    <string name="go_back_lowercase">Go back</string>
    <string name="history">History</string>
    <string name="hub_tab_all">All</string>
    <string name="hub_tab_business_tools">Business</string>
    <string name="hub_tab_finance">Finance</string>
    <string name="hub_tab_settings">Settings</string>
    <string name="just_popping_out">Just poppping out for same improvements!\nDon’t worry, we won’t be long.</string>
    <string name="link_picker_cookie_policy">Cookie Policy</string>
    <string name="link_picker_privacy_policy">Privacy Policy</string>
    <string name="link_picker_support_email">Support Email</string>
    <string name="link_picker_terms_conditions">Terms Conditions</string>
    <string name="maintenance">Maintenance</string>
    <string name="new_">New</string>
    <string name="personal">Personal</string>
    <string name="phone">Phone</string>
    <string name="physical">Physical</string>
    <string name="proceed">Proceed</string>
    <string name="refresh">Refresh</string>
    <string name="send_code">Send code</string>
    <string name="settings">Settings</string>
    <string name="update_now">Update Now</string>
    <string name="virtual">Virtual</string>
    <string name="yes_continue">Yes, continue</string>
    <string name="your_current_app_version_is_no_longer_supported">Your current app version is no longer supported. To continue accessing your account and ensure the best experience, please update to the latest version.</string>
</resources>