<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/cell_settings_tab_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="3dp">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_home"
        android:background="@drawable/tabs_background_white"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/middle_gray"
        style="@style/RoundedTabLayoutStyleWhite">
        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/personal"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/business"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
