<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:background="@drawable/cell_bg_full_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_support_email"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/link_picker_support_email"
            android:fontFamily="@font/inter_regular"
            android:letterSpacing="0"/>
        <View
            android:id="@+id/divider_1"
            android:background="@color/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_cookie_policy"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/link_picker_cookie_policy"
            android:fontFamily="@font/inter_regular"
            android:letterSpacing="0"/>
        <View
            android:id="@+id/divider_2"
            android:background="@color/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/link_picker_privacy_policy"
            android:fontFamily="@font/inter_regular"
            android:letterSpacing="0"/>
        <View
            android:id="@+id/divider_3"
            android:background="@color/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_terms_conditions"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:text="@string/link_picker_terms_conditions"
            android:fontFamily="@font/inter_regular"
            android:letterSpacing="0"/>
    </LinearLayout>
    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:background="@drawable/cell_bg_full_10"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:fontFamily="@font/inter_regular"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:letterSpacing="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
</androidx.constraintlayout.widget.ConstraintLayout>
