<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_new_card_list_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_home"
        android:background="@drawable/tabs_background_white"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RoundedTabLayoutStyleWhite">
        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/physical"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/virtual"/>
    </com.google.android.material.tabs.TabLayout>
    <ImageView
        android:id="@+id/imgCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="36dp"
        android:layout_marginHorizontal="41dp"
        app:layout_constraintBottom_toTopOf="@+id/button_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_home"/>
    <Button
        android:id="@+id/button_accept"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/confirm"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/BlackButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
