<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/dialog_passcode_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="28sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/change_your_5_digit_passcode"
        android:lineSpacingExtra="-6sp"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        style="@style/Text.Inter.Medium"/>
    <ImageView
        android:id="@+id/image"
        android:layout_width="228dp"
        android:layout_height="83dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="46dp"
        android:text="@string/yes_continue"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        style="@style/BlackButton"/>
    <Button
        android:textColor="@color/black"
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="@dimen/dialog_bottom_margin"
        android:text="@string/go_back_lowercase"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ok"
        style="@style/BlackStrokeButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
