<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/dialog_version_0"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_sort_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:textSize="26sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/title"
            android:paddingTop="42dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:text="@string/app_update_required"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Text.Inter.Medium"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/middle_gray"
            android:gravity="center"
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="51dp"
            android:text="@string/your_current_app_version_is_no_longer_supported"
            android:layout_marginHorizontal="39dp"
            app:layout_constraintBottom_toTopOf="@+id/button_accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Text.Inter.Medium"/>
        <Button
            android:id="@+id/button_accept"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="51dp"
            android:text="@string/update_now"
            android:layout_marginHorizontal="37dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/GreenLoginButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
