<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">
    <com.luminary.business.presentation.ui.views.customtextinput.CustomTextInputLayout
        android:id="@+id/firstnputLayout"
        android:background="@drawable/cell_bg_full_active"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/phone"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Luminary.TextInputLayout">
        <com.luminary.business.presentation.ui.views.customtextinput.CustomTextInputEditText
            android:id="@+id/firstInputView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            style="@style/Widget.Luminary.TextInputEditTextNoHint"/>
    </com.luminary.business.presentation.ui.views.customtextinput.CustomTextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_code"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/send_code"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/firstnputLayout"
        app:layout_constraintEnd_toEndOf="@+id/firstnputLayout"
        app:layout_constraintTop_toTopOf="@+id/firstnputLayout"
        style="@style/AuthButton"/>
    <TextView
        android:textColor="@color/black"
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/enter_2fa_code"
        app:layout_constraintStart_toStartOf="@+id/codeTextView"
        app:layout_constraintTop_toBottomOf="@+id/firstnputLayout"
        style="@style/Text.Inter.ExtraBold.16"/>
    <com.luminary.business.presentation.ui.views.CodeTextView
        android:textSize="30sp"
        android:textColor="@color/black"
        android:id="@+id/codeTextView"
        android:padding="0dp"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="21dp"
        android:cursorVisible="false"
        android:maxLength="7"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:size="7"
        style="@style/Text.Inter.Bold"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:background="@drawable/button_black_left_right"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/AuthButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
