<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:tag="layout/fragment_server_error_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/bgView"
        android:background="@drawable/bg_server_screen"
        android:layout_width="806dp"
        android:layout_height="730dp"
        android:layout_marginTop="-242dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.github.mmin18.widget.RealtimeBlurView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/bgView"
        app:layout_constraintTop_toTopOf="parent"
        app:realtimeBlurRadius="20dp"
        app:realtimeOverlayColor="@color/transparent"/>
    <ImageView
        android:id="@+id/ivAnimation"
        android:layout_width="151dp"
        android:layout_height="151dp"
        android:layout_marginTop="151dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/text_size_28"
        android:textColor="@color/black"
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/maintenance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAnimation"
        style="@style/Text.Inter.Medium"/>
    <TextView
        android:textSize="@dimen/text_size_15"
        android:textColor="@color/middle_gray"
        android:gravity="center"
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_popping_out"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        style="@style/Text.Inter.Medium"/>
    <Button
        android:id="@+id/button_done"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="44dp"
        android:text="@string/refresh"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/BlackButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
